--- a/courseManager.css
+++ b/courseManager.css
@@ -67,7 +67,7 @@ input[value="ADD"] {
 }
 
 footer {
-  position: relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 60px; /* Height of the footer */
